--- a/styles/reset.css
+++ b/styles/reset.css
@@ -11,6 +11,7 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
+	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -40,4 +41,8 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+
+a {
+	text-decoration: none;
 }
